--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
   google_sign_in: ^6.2.1
+  intl: ^0.18.1
   # State management intentionally omitted as per user request
 
   # The following adds the Cupertino Icons font to your application.
